--- a/templates/fragments/macetas_fragment.html
+++ b/templates/fragments/macetas_fragment.html
@@ -1,11 +1,14 @@
 <div class="form-group">
-    <label for="tipo_maceta" class="h4">Tipo de Maceta</label>
-    <select class="form-control form-control-lg" id="tipo_maceta" name="tipo_maceta">
+<label for="tipo_maceta" class="h4" style="font-size: 3.5rem;">Tipo de Maceta</label>
+    <select class="form-control"
+            id="tipo_maceta"
+            name="tipo_maceta"
+            data-producto="macetas"
+            style="font-size: 2.5rem; height: 80px;">
         <option value="">Selecciona el tipo de maceta</option>
-        <option value="Maceta">Maceta</option>
-        <option value="Maceta con yute">Maceta con yute</option>
-        <option value="Maceta con caja">Maceta con caja</option>
-        <option value="Maceta con sticker">Maceta con sticker</option>
-        <option value="Maceta con girasol">Maceta con girasol</option>
+        <option value="macetas">Macetita</option>
+        <option value="macetas_con_yute">Macetita con yute</option>
+        <option value="macetas_con_caja">Macetita con caja</option>
+        <option value="macetas_con_sticker">Macetita con sticker</option>
     </select>
 </div>
