correcciones en los botensdecopiar

--- a/templates/respuesta_ubicacion.html
+++ b/templates/respuesta_ubicacion.html
@@ -7,12 +7,12 @@
 
     <!-- Respuesta a la ubicación -->
     <div id="ubicacion-texto" class="container mt-4" style="max-width: 100%; width: 95%; margin: 0 auto;">
-        <div class="alert alert-info" id="texto-copiable" class="copiable-content" style="font-size: 3.75rem;">
+        <div class="alert alert-info copiable-content" id="texto-copiable" style="font-size: 3.75rem;">
             <p>🌍 Somos una tienda virtual.</p>
             <p>🛵✨ Realizamos entregas a domicilio dentro de Lima Metropolitana.</p>
             <p>🚫 (No contamos con tienda física por el momento).</p>
         </div>
-        <button class="btn btn-success mt-3" onclick="copiarTexto()" style="font-size: 3.75rem; padding: 15px 30px;">Copiar texto</button>
+      <button class="btn btn-success mt-3" onclick="copiarTexto('texto-copiable')" style="font-size: 3.75rem; padding: 15px 30px;">Copiar texto</button>
     </div>
 
     <script>
