--- a/templates/cotizar.html
+++ b/templates/cotizar.html
@@ -7,7 +7,7 @@
 
 <!-- Selección de producto -->
 <div class="form-group">
-<label for="cantidad" class="h4" style="font-size: 3.5rem;">Cantidad</label>
+    <label for="producto" class="h4" style="font-size: 3.5rem;">Producto</label>
     <select class="form-control"
             id="producto"
             name="producto"
@@ -16,6 +16,7 @@
             style="font-size: 2.5rem; height: 80px;">
         <option value="">Selecciona un producto</option>
         <option value="macetas">Maceta</option>
+        <option value="macetas_circulares">Maceta circular</option>
     </select>
 </div>
 
@@ -24,7 +25,7 @@
 
 <!-- Campo de cantidad -->
 <div class="form-group mt-4" id="cantidad-container" style="display:none;">
-<label for="producto" class="h4" style="font-size: 3.5rem;">Producto</label>
+    <label for="cantidad" class="h4" style="font-size: 3.5rem;">Cantidad</label>
     <input type="number" id="cantidad" name="cantidad"
            class="form-control"
            style="font-size: 2.5rem; height: 80px;"
@@ -35,8 +36,9 @@
 <p class="mt-3" id="precio-macetas" style="display:none; font-size: 2rem;"></p>
 <p class="mt-2 text-info font-weight-bold" id="resumen-cotizacion" style="display:none; font-size: 3rem;"></p>
 
-
-
-<!-- JS externo -->
+<!-- JS externos -->
 <script src="{{ url_for('static', filename='cotizar_macetas.js') }}"></script>
+<script src="{{ url_for('static', filename='cotizar_macetas_circulares.js') }}"></script>
+<script src="{{ url_for('static', filename='cotizar_controlador.js') }}"></script>
+
 {% endblock %}
