maceta de loza agregado js y todo lo demas

--- a/templates/cotizar.html
+++ b/templates/cotizar.html
@@ -17,6 +17,7 @@
         <option value="">Selecciona un producto</option>
         <option value="macetas">Maceta</option>
         <option value="macetas_circulares">Maceta circular</option>
+        <option value="macetas_de_loza">Maceta de loza</option>
     </select>
 </div>
 
@@ -39,6 +40,8 @@
 <!-- JS externos -->
 <script src="{{ url_for('static', filename='cotizar_macetas.js') }}"></script>
 <script src="{{ url_for('static', filename='cotizar_macetas_circulares.js') }}"></script>
+<script src="{{ url_for('static', filename='cotizar_macetas_loza.js') }}"></script>
 <script src="{{ url_for('static', filename='cotizar_controlador.js') }}"></script>
+
 
 {% endblock %}
