--- a/templates/cotizar.html
+++ b/templates/cotizar.html
@@ -18,6 +18,7 @@
         <option value="macetas">Maceta</option>
         <option value="macetas_circulares">Maceta circular</option>
         <option value="macetas_de_loza">Maceta de loza</option>
+        <option value="macetas_de_arcilla">Macetas de Arcilla</option>
     </select>
 </div>
 
@@ -41,6 +42,8 @@
 <script src="{{ url_for('static', filename='cotizar_macetas.js') }}"></script>
 <script src="{{ url_for('static', filename='cotizar_macetas_circulares.js') }}"></script>
 <script src="{{ url_for('static', filename='cotizar_macetas_loza.js') }}"></script>
+<script src="{{ url_for('static', filename='cotizar_macetas_arcilla.js') }}"></script>
+
 <script src="{{ url_for('static', filename='cotizar_controlador.js') }}"></script>
 
 
