--- a/templates/respuesta_precio.html
+++ b/templates/respuesta_precio.html
@@ -8,7 +8,7 @@
     <!-- Respuesta al precio con la cotización solicitada -->
     <div id="precio-texto" class="container mt-4" style="max-width: 100%; width: 95%; margin: 0 auto;">
         <div class="alert alert-info copiable-content" id="texto-copiable" style="font-size: 3.75rem;">
-            <p>💬 ¿Podrías indicarme cuántas unidades deseas y para qué ocasión es? Así puedo brindarte una cotización y recomendarte los modelos más adecuados. 😊✨</p>
+            <p>💬 ¿Podrías indicarme cuántas unidades necesitas? De esta manera, podré ofrecerte una cotización más precisa.😊✨</p>
             <p>🚚 Hacemos entregas en Lima (el costo de delivery depende del distrito).</p>
         </div>
            <button class="btn btn-success mt-3" onclick="copiarTexto('texto-copiable')" style="font-size: 3.75rem; padding: 15px 30px;">Copiar texto</button>
