--- a/templates/publicar/publicare_para_toda_ocasion.html
+++ b/templates/publicar/publicare_para_toda_ocasion.html
@@ -30,7 +30,7 @@
         </ul>
 
         <p>🎁 Presentación lista para regalar.</p>
-        <p>📍 Entrega en [coloca tu ubicación].</p>
+        <p>📍 Entrega en todo Lima.</p>
         <p>📦 Pedidos a partir de 25 unidades.</p>
 
         <p>💬 Escríbenos para más información y cotizaciones. ¡Reserva con anticipación! 📩</p>
@@ -68,7 +68,7 @@
     </ul>
 
     <p>🎁 Presentación lista para regalar.</p>
-    <p>📍 Entrega en [coloca tu ubicación].</p>
+    <p>📍 Entrega en todo Liama.</p>
     <p>📦 Pedidos a partir de 25 unidades.</p>
 
     <p>💬 Escríbenos para más información y cotizaciones. ¡Reserva con anticipación! 📩</p>
