--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                     <a class="dropdown-item" href="{{ url_for('publicare_Día_de_la_Madre') }}">Día de la Madre</a>
                     <a class="dropdown-item" href="{{ url_for('publicare_Día_del_Trabajador') }}">Día del Trabajador</a>
                     <a class="dropdown-item d-none" href="{{ url_for('publicare_Día_de_la_Mujer') }}">Día de la Mujer</a>
+                    <a class="dropdown-item" href="{{ url_for('publicare_exposicion') }}">Exposición</a>
                     <a class="dropdown-item" href="{{ url_for('publicare_Quince_Años') }}">Quince Años</a>
                     <a class="dropdown-item" href="{{ url_for('publicare_Corporativo') }}">Corporativo</a>
                     <a class="dropdown-item" href="{{ url_for('publicare_Matrimonio') }}">Matrimonio</a>
@@ -60,7 +61,17 @@
                     <a class="dropdown-item d-none" href="{{ url_for('publicare_San_Valentín') }}">San Valentín</a>
                     <a class="dropdown-item d-none" href="{{ url_for('publicare_Navidad') }}">Navidad</a>                    
                 </div>
-            </li>            
+            </li> 
+                        </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-white large-link" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Para Factura
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('proforma') }}">Proforma</a>
+                </div>
+            </li>                
         </ul>
     </div>
 </nav>
@@ -77,6 +88,11 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
+<!-- Librerías para capturar y generar PDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
 
 </body>
 
